<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    android:padding="10dp">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:src="@drawable/launcher"
        android:layout_margin="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/verify_your_identity"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/enter_the_code_we_sent_to_the_phone_number_ending_in"
        android:textSize="14sp" />

    <com.goodiebag.pinview.Pinview
        android:id="@+id/pinview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:cursorVisible="true"
        app:forceKeyboard="true"
        app:hint="0"
        app:inputType="number"
        app:password="false"
        app:pinHeight="35dp"
        app:pinLength="6"
        app:pinWidth="35dp" />

    <TextView
        android:id="@+id/txtVerify"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorBase"
        android:gravity="center"
        android:text="@string/verify"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtResend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/resend_code"
        android:gravity="center"
        android:padding="5dp"
        android:textSize="14sp"
        android:textColor="@color/colorBlack"/>

    <TextView
        android:id="@+id/txtResendTimer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:padding="5dp"
        android:textSize="14sp"
        android:textColor="@color/colorBlack"/>
</LinearLayout>