<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    tools:context=".Activities.SignupActivity">

    <LinearLayout
        android:id="@+id/rl_Top"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:background="@color/colorBase"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_Bck"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:padding="@dimen/_10sdp"
            android:src="@drawable/ic_bck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="User Profile"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_16sdp" />

    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/tv_Start"
        android:layout_below="@+id/rl_Top"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:background="@drawable/bg_one"
                android:padding="@dimen/_5sdp"
                android:visibility="gone">


                <ImageView
                    android:id="@+id/iv_Camera"
                    android:layout_width="@dimen/_90sdp"
                    android:layout_height="@dimen/_90sdp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/camera" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/_20sdp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <EditText
                        android:id="@+id/et_Fname"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.995"
                        android:background="@null"
                        android:hint="@string/fname"
                        android:inputType="textCapSentences"
                        android:paddingLeft="@dimen/_15sdp" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.01"
                        android:alpha="0.5"
                        android:background="@color/colorGrayLight" />

                    <EditText
                        android:id="@+id/et_Lname"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.995"
                        android:background="@null"
                        android:hint="@string/lname"
                        android:inputType="textCapSentences"
                        android:paddingLeft="@dimen/_15sdp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:alpha="0.5"
                    android:background="@color/colorGrayLight" />

                <EditText
                    android:id="@+id/et_Email"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:background="@null"
                    android:editable="false"
                    android:focusable="false"
                    android:hint="@string/enteremail"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="@dimen/_15sdp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:alpha="0.5"
                    android:background="@color/colorGrayLight" />

                <EditText
                    android:id="@+id/et_Password"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:background="@null"
                    android:hint="@string/enterpass"
                    android:inputType="textPassword"
                    android:paddingLeft="@dimen/_15sdp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:alpha="0.5"
                    android:background="@color/colorGrayLight" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:paddingLeft="@dimen/_15sdp"
                        android:paddingRight="@dimen/_10sdp"
                        android:text="+91"
                        android:textSize="@dimen/_16sdp" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:alpha="0.5"
                        android:background="@color/colorGrayLight" />

                    <EditText
                        android:id="@+id/et_Mobile"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_50sdp"
                        android:background="@null"
                        android:hint="@string/phonenum"
                        android:inputType="number"
                        android:maxLength="10"
                        android:paddingLeft="@dimen/_5sdp" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:alpha="0.5"
                    android:background="@color/colorGrayLight" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorGrayLight"
                    android:padding="10dp"
                    android:text="Bank Details"
                    android:textColor="@color/colorBlack"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:alpha="0.5"
                    android:background="@color/colorGrayLight" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <EditText
                        android:id="@+id/et_accountFname"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.995"
                        android:background="@null"
                        android:hint="First Name"
                        android:inputType="textCapSentences"
                        android:paddingLeft="@dimen/_15sdp" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.01"
                        android:alpha="0.5"
                        android:background="@color/colorGrayLight" />

                    <EditText
                        android:id="@+id/et_accountLname"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.995"
                        android:background="@null"
                        android:hint="Last Name"
                        android:inputType="textCapSentences"
                        android:paddingLeft="@dimen/_15sdp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:alpha="0.5"
                    android:background="@color/colorGrayLight" />


                <EditText
                    android:id="@+id/et_Accno"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:background="@null"
                    android:hint="Enter Account No"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:paddingLeft="@dimen/_15sdp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:alpha="0.5"
                    android:background="@color/colorGrayLight" />

                <EditText
                    android:id="@+id/et_IfscCode"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:background="@null"
                    android:hint="Enter IFSC Code"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:paddingLeft="@dimen/_15sdp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:alpha="0.5"
                    android:background="@color/colorGrayLight" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:paddingLeft="@dimen/_15sdp"
                        android:paddingRight="@dimen/_10sdp"
                        android:text="+91"
                        android:textSize="@dimen/_16sdp" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:alpha="0.5"
                        android:background="@color/colorGrayLight" />

                    <EditText
                        android:id="@+id/et_paymentMobile"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_50sdp"
                        android:background="@null"
                        android:hint="Enter Payment Mobile"
                        android:inputType="number"
                        android:maxLength="10"
                        android:paddingLeft="@dimen/_5sdp" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:alpha="0.5"
                    android:background="@color/colorGrayLight" />


            </LinearLayout>


        </LinearLayout>

    </ScrollView>
    <TextView
        android:id="@+id/tv_Start"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/colorBase"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:text="@string/update"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_16sdp"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/rl_Loader"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000"
        android:clickable="true"
        android:visibility="gone">

        <com.github.ybq.android.spinkit.SpinKitView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/spin_kit"
            style="@style/SpinKitView.Circle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            app:SpinKit_Color="@color/colorWhite" />

    </RelativeLayout>

</RelativeLayout>